// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthPage renders the Login page correctly 1`] = `
<DocumentFragment>
  <div
    class="auth-page"
  >
    <div
      class="container page"
    >
      <div
        class="row"
      >
        <div
          class="col-md-6 offset-md-3 col-xs-12"
        >
          <h1
            class="text-xs-center"
          >
            Sign in
          </h1>
          <p
            class="text-xs-center"
          >
            <a
              href="/register"
            >
              Need an account?
            </a>
          </p>
          <form>
            <fieldset
              class="form-group"
            >
              <input
                aria-label="Email"
                class="form-control form-control-lg"
                placeholder="Email"
                required=""
                type="email"
              />
            </fieldset>
            <fieldset
              class="form-group"
            >
              <input
                aria-label="Password"
                class="form-control form-control-lg"
                minlength="8"
                pattern=".{8,}"
                placeholder="Password"
                required=""
                type="password"
              />
            </fieldset>
            <button
              class="btn btn-lg btn-primary pull-xs-right"
              disabled=""
            >
              Sign in
              <svg
                id="loading-spinner"
                style="margin-left: 0.5rem; display: none;"
                viewBox="0 0 100 100"
                width="1rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="50"
                  cy="50"
                  id="circle"
                  r="45"
                  style="stroke: #fff;"
                />
              </svg>
            </button>
          </form>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AuthPage renders the Register page correctly 1`] = `
<DocumentFragment>
  <div
    class="auth-page"
  >
    <div
      class="container page"
    >
      <div
        class="row"
      >
        <div
          class="col-md-6 offset-md-3 col-xs-12"
        >
          <h1
            class="text-xs-center"
          >
            Sign up
          </h1>
          <p
            class="text-xs-center"
          >
            <a
              href="/login"
            >
              Have an account?
            </a>
          </p>
          <form>
            <fieldset
              class="form-group"
            >
              <input
                aria-label="Username"
                class="form-control form-control-lg"
                placeholder="Username"
                required=""
                type="text"
              />
            </fieldset>
            <fieldset
              class="form-group"
            >
              <input
                aria-label="Email"
                class="form-control form-control-lg"
                placeholder="Email"
                required=""
                type="email"
              />
            </fieldset>
            <fieldset
              class="form-group"
            >
              <input
                aria-label="Password"
                class="form-control form-control-lg"
                minlength="8"
                pattern=".{8,}"
                placeholder="Password"
                required=""
                type="password"
              />
            </fieldset>
            <button
              class="btn btn-lg btn-primary pull-xs-right"
              disabled=""
            >
              Sign up
              <svg
                id="loading-spinner"
                style="margin-left: 0.5rem; display: none;"
                viewBox="0 0 100 100"
                width="1rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="50"
                  cy="50"
                  id="circle"
                  r="45"
                  style="stroke: #fff;"
                />
              </svg>
            </button>
          </form>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
